    Backported: imscp-mountall-mngr (as imscp-mountall) from 1.3.x branch - Mount i-MSCP file systems on server reboot
    Backported: iMSCP::Mount library from 1.3.x branch - Library for mounting/unmounting file systems
    Changed: Upstart job file paths, sysvinit script paths and systemd unit files paths are now cached (init providers)
    Fixed: composer.phar must not be run with root user privileges (it is now run with i-MSCP system master user)
    Fixed: Could not disable custom DNS resource records; DNS resource records are always re-enabled on domain change
    Fixed: Database handle is destroyed when calling fork(), leading to unexpected failure (iMSCP::Database::mysql)
    Fixed: eth0 is hardcoded in i-MSCP network interface provider
    Fixed: Ignore user-specific options if any (~/.my.cnf file) when running mysqldump (iMSCP::Database::mysql::dumpdb)
    Fixed: Many inconsistencies in iMSCP::Getopt
    Improvement: Allow registering listeners on many events at once (Event::Manager)
    Introduced: HSTS (HTTP Strict Transport Security) feature
    Removed: beforeDispatchRequest and afterDispatchRequest events
    Removed: cache data directory (/var/cache/imscp directory)
    Removed: imscp-httpd-logs-mngr script (Apache2 logs dirctories are now mounted via the imscp_mountall service)
    Removed: installConfFile() method from httpd server packages
    Rewritten: iMSCP::SetRights library (usage of built-in functions to avoid call of system chown/chmod commands)

CONFIG
    Added: php configuration directory (directory which holds all PHP template and configuration parameters)
    Added: DISTRO_ID, DISTRO_CODENAME and DISTRO_RELEASE parameters in imscp.conf file
    Added: IMSCP_USER parameter (name of i-MSCP master system user)
    Added: IPV6_SUPPORT parameter (tells whether or not IPv6 support is enabled for the server)
    Added: MAX_INSTANCES, MAX_CLIENT_PER_HOST and FTPD_CONF_DIR parameters in proftpd/proftpd.data file